--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-PyYAML==5.3
+PyYAML~=5.4.1
 easydict==1.9
 open3d==0.12.0
 
@@ -9,3 +9,6 @@ Flask-SQLAlchemy==2.4.1
 Flask-Script==2.0.6
 Flask-Cors==3.0.8
 Flask-Login==0.4.1
+
+numpy~=1.20.3
+yaml~=0.1.7
